{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 205,
  "lineage": "7a0c8a3c-e9ad-13e0-3799-d5a3897f8823",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mwaa_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fc2c169e5ab84c7",
            "arn": "arn:aws:ec2:eu-central-1:562559070924:elastic-ip/eipalloc-08fc2c169e5ab84c7",
            "association_id": "eipassoc-045384be75f95525e",
            "domain": "vpc",
            "id": "eipalloc-08fc2c169e5ab84c7",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0070791c5fc7baa4c",
            "private_dns": "ip-10-0-3-192.eu-central-1.compute.internal",
            "private_ip": "10.0.3.192",
            "public_dns": "ec2-3-121-2-146.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.121.2.146",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Name": "driven_data-nat-eip"
            },
            "tags_all": {
              "Name": "driven_data-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mwaa_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:562559070924:internet-gateway/igw-0fe5396853d84a70a",
            "id": "igw-0fe5396853d84a70a",
            "owner_id": "562559070924",
            "region": "eu-central-1",
            "tags": {
              "Name": "driven_data"
            },
            "tags_all": {
              "Name": "driven_data"
            },
            "vpc_id": "vpc-072d3eba6a11059e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mwaa_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fc2c169e5ab84c7",
            "association_id": "eipassoc-045384be75f95525e",
            "connectivity_type": "public",
            "id": "nat-0212bca64a49fe44b",
            "network_interface_id": "eni-0070791c5fc7baa4c",
            "private_ip": "10.0.3.192",
            "public_ip": "3.121.2.146",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cb32350616d3160f",
            "tags": {
              "Name": "driven_data"
            },
            "tags_all": {
              "Name": "driven_data"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mwaa_nat_eip",
            "aws_subnet.public_subnet_1",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:562559070924:route-table/rtb-0d5d7c7a4b1a0da41",
            "id": "rtb-0d5d7c7a4b1a0da41",
            "owner_id": "562559070924",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0212bca64a49fe44b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "driven_data-private"
            },
            "tags_all": {
              "Name": "driven_data-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-072d3eba6a11059e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mwaa_nat_eip",
            "aws_nat_gateway.mwaa_nat",
            "aws_subnet.public_subnet_1",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:562559070924:route-table/rtb-0cbeae5d55c4b18c3",
            "id": "rtb-0cbeae5d55c4b18c3",
            "owner_id": "562559070924",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fe5396853d84a70a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "driven_data-public"
            },
            "tags_all": {
              "Name": "driven_data-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-072d3eba6a11059e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.mwaa_igw",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063d0874c7bc3eb0a",
            "region": "eu-central-1",
            "route_table_id": "rtb-0d5d7c7a4b1a0da41",
            "subnet_id": "subnet-0252d867162257d09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mwaa_nat_eip",
            "aws_nat_gateway.mwaa_nat",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0571f1a63f3af9fb4",
            "region": "eu-central-1",
            "route_table_id": "rtb-0d5d7c7a4b1a0da41",
            "subnet_id": "subnet-0b16521b91001e1c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mwaa_nat_eip",
            "aws_nat_gateway.mwaa_nat",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0446e54a5f9439a82",
            "region": "eu-central-1",
            "route_table_id": "rtb-0cbeae5d55c4b18c3",
            "subnet_id": "subnet-0cb32350616d3160f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.mwaa_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a427795eb257909",
            "region": "eu-central-1",
            "route_table_id": "rtb-0cbeae5d55c4b18c3",
            "subnet_id": "subnet-0c5d215846d948826"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.mwaa_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mwaa_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:562559070924:security-group/sg-0d77f260b76c080fc",
            "description": "Allow HTTPS access to MWAA UI",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d77f260b76c080fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "109.207.116.217/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "driven_data-mwaa-sg",
            "name_prefix": "",
            "owner_id": "562559070924",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "driven_data-mwaa-sg"
            },
            "tags_all": {
              "Name": "driven_data-mwaa-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-072d3eba6a11059e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:562559070924:subnet/subnet-0252d867162257d09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0252d867162257d09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562559070924",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "driven_data-private-1"
            },
            "tags_all": {
              "Name": "driven_data-private-1"
            },
            "vpc_id": "vpc-072d3eba6a11059e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:562559070924:subnet/subnet-0b16521b91001e1c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b16521b91001e1c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562559070924",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "driven_data-private-2"
            },
            "tags_all": {
              "Name": "driven_data-private-2"
            },
            "vpc_id": "vpc-072d3eba6a11059e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:562559070924:subnet/subnet-0cb32350616d3160f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb32350616d3160f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "562559070924",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "driven_data-public-1"
            },
            "tags_all": {
              "Name": "driven_data-public-1"
            },
            "vpc_id": "vpc-072d3eba6a11059e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:562559070924:subnet/subnet-0c5d215846d948826",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5d215846d948826",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "562559070924",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "driven_data-public-2"
            },
            "tags_all": {
              "Name": "driven_data-public-2"
            },
            "vpc_id": "vpc-072d3eba6a11059e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mwaa_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:562559070924:vpc/vpc-072d3eba6a11059e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0321282a0d05c4501",
            "default_route_table_id": "rtb-0cf2867617e09969f",
            "default_security_group_id": "sg-0610146dfb57aaf72",
            "dhcp_options_id": "dopt-0aa783f600208ebef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-072d3eba6a11059e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf2867617e09969f",
            "owner_id": "562559070924",
            "region": "eu-central-1",
            "tags": {
              "Name": "driven_data"
            },
            "tags_all": {
              "Name": "driven_data"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}